# power_consumption_experiment

./: LICENSE
data_aggregator/: .gitignore  pyproject.toml
data_aggregator/src/data_aggregator/: __init__.py  __main__.py  aggregator.py  cli.py  logging.yaml  measurement_collector.py  measurement_info.py  run_collector.py  run_info.py  tool_aggregator.py
data_aggregator/src/data_aggregator/aggregate/: __init__.py  aggregator.py  measurement_info.py  run_collector.py  tool_aggregator.py
data_aggregator/src/data_aggregator/aggregator/: __init__.py  aggregator.py  energy_aggregator.py  energy_aggregator_test.py  power_aggregator.py  power_aggregator_test.py  run_aggregator.py  tool_preprocessor.py
data_aggregator/src/data_aggregator/calculate/: __init__.py  average_calculator.py  average_calculator_test.py  energy_calculator.py  energy_calculator_test.py  power_calculator.py  power_calculator_test.py  trapezoid_energy_calculator.py  trapezoid_energy_calculator_test.py
data_aggregator/src/data_aggregator/common/: __init__.py  tool_config.py
data_aggregator/src/data_aggregator/ingest/: __init__.py  run_collector.py
data_aggregator/src/data_aggregator/preprocess/: preprocessor.py  tool_preprocessor.py
data_aggregator/src/data_aggregator/util/: __init__.py  frame_io.py  frame_persist.py
data_aggregator/src/data_processor/: __main__.py  measurement_collector.py
script_generation/: .gitignore  pyproject.toml
script_generation/src/generator/: baseline_script_generator.py  cli.py  data_gen_script_generator.py  data_script_generator.py  data_set.py  dataset_script_generator.py  generator_type.py  host_script_generator.py  logging.yaml  mode_script_generator.py  script_generator.py  single_script_generator.py  template_args.py  threading.py  tool_config.py  tool_script_generator.py  tools.py
(+41 files in other folders)
